# DjangoRealtime

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
djangorealtime/: __init__.py  admin.py  apps.py  config.py  hooks.py  listener.py  models.py  publisher.py  queues.py  retry.py  signals.py  structs.py  thread_pool.py  urls.py  utils.py  views.py
djangorealtime/backends/: __init__.py  base.py  postgresql.py  utils.py
djangorealtime/migrations/: 0001_initial.py  0002_eventactivity.py
djangorealtime/static/djangorealtime/js/: realtime.js
djangorealtime/templatetags/: djangorealtime_tags.py
example/: manage.py  settings.py  urls.py  views.py
example/templates/: test_sse.html
examples/: Dockerfile  README.md  Taskfile.yml  manage.py  requirements.txt
examples/chatroom/: apps.py  hooks.py  models.py  urls.py  views.py
examples/chatroom/management/commands/: seed_chat.py
examples/chatroom/templates/chatroom/: chat.html  login.html
examples/chatroom/templates/chatroom/partials/: message.html  messages_list.html
examples/playground/: apps.py  urls.py  views.py
examples/playground/management/commands/: seed_users.py
examples/playground/templates/playground/: test_sse.html
examples/root/: asgi.py  hooks.py  middleware.py  settings.py  urls.py  views.py
examples/root/templates/root/: index.html
tests/: conftest.py  test_end_to_end.py  test_hook.py  test_retry.py  test_views.py
